--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -15,38 +15,42 @@
 .markdown h2,
 .markdown h3,
 .markdown h4 {
-  margin: 1.414rem 0 0.5rem;
-  font-weight: inherit;
+  margin: 0.5rem 0;
+  font-weight: bold;
   line-height: 1.42;
 }
 
 .markdown h1 {
-  margin-top: 0;
-  font-size: 3.998rem;
+  font-size: 1.5rem;
 }
 
 .markdown h2 {
-  font-size: 2.827rem;
+  font-size: 1.3rem;
 }
 
 .markdown h3 {
-  font-size: 1.999rem;
+  font-size: 1.1rem;
 }
 
 .markdown h4 {
-  font-size: 1.414rem;
+  font-size: 1rem;
 }
 
 .markdown h5 {
-  font-size: 1.121rem;
+  font-size: 0.9rem;
 }
 
 .markdown h6 {
-  font-size: 0.88rem;
+  font-size: 0.8rem;
 }
 
 .markdown small {
-  font-size: 0.707em;
+  font-size: 0.7rem;
+}
+
+.markdown blockquote {
+  font: normal helvetica, sans-serif;
+  border-left: 5px solid #ccc;
 }
 
 .markdown img,
@@ -89,12 +93,6 @@
 
 .markdown li {
   margin-left: 1rem;
-}
-
-/* Counteract the specificity of the gross *:not() chain. */
-
-.markdown h1 {
-  padding: 4rem 0 !important;
 }
 
 /*  === End gross hack */
